--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 #.DS_Store
 .DS_Store
 
+#.virtual_documents
+.virtual_documents
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
